--- a/css/news.css
+++ b/css/news.css
@@ -15,6 +15,10 @@
     height: 100px;
     width: 100%;
     }
+.content1{
+    height: 300px;
+    width: 800px;
+}
 #contentheader h1 /*for the font of the title, inside the content header*/
 { 
     font-size: 50px;
@@ -37,6 +41,7 @@
     margin-top: 30px;
     margin-right: 100px;
     clear: both;
+    padding-bottom: 5px;
   
 }
 .rightlayout a:hover /*the image can change color when the cursor pointed at the image*/
