--- a/css/news.css
+++ b/css/news.css
@@ -70,3 +70,100 @@
     margin-right: 100px;
  
 }
+
+
+
+
+
+
+
+
+
+
+@media(max-width: 415px){
+    #wrap /*to make a frame for the content of the article so the article won't go anywhere */
+{
+    margin-left: 0px;
+    margin-right: 50px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    width: 800px;
+    background: #fff;
+    padding: 10px;
+}
+#contentheader /*for the frame of the title, recommended to use div*/
+{
+    background-color: gainsboro;
+    color: black;
+    height: 46px;
+    width: 25%;
+    }
+.content1{
+    height: 140px;
+    width: 25%;
+}
+#content b h1{
+    font-size: 11px;
+}
+
+#content p{
+    font-size: 6px;
+    width: 25%;
+}
+#contentheader h1 /*for the font of the title, inside the content header*/
+{ 
+    font-size: 11px;
+    letter-spacing: -1px;
+    padding: 17px 0 0 10px;
+    color: indianred;
+}
+#contentheader p{
+    font-size: 6px;
+}
+#content /*where the article is written*/
+{
+    padding: 0 20px 20px 0;
+    font-size: 20px;
+}
+.rightlayout a /*for the recomendation to read next, recomended for image, use it before using wrap*/
+{
+    float: right;
+    width: 200px;
+    height: 140px;
+    text-align: justify;
+    padding-top: 5px;
+    margin-top: 30px;
+    margin-right: 5px;
+    clear: both;
+    padding-bottom: 5px;
+  
+}
+.rightlayout a:hover /*the image can change color when the cursor pointed at the image*/
+{
+    float: right;
+    width: 400px;
+    height: 300px;
+    text-align: justify;
+    padding-top: 5px;
+    margin-top: 30px;
+    margin-right: 100px;
+    clear: both;
+    opacity: 30%;
+  
+}
+.righttitle h2 a /*for hyperlink of .rightlayout a, use it after using .rightlayout a*/
+{
+    text-decoration: none;
+    text-align: center;
+    padding-top: 10px;
+    float: right;
+    width: 200px;
+    height: 20px;
+    background-color: gainsboro;
+    font-size: 11px;
+    clear: both;
+    margin-right: 5px;
+ 
+}
+
+}
