--- a/css/news.css
+++ b/css/news.css
@@ -167,3 +167,86 @@
 }
 
 }
+
+
+
+
+
+
+
+
+
+@media(max-width: 360px){
+    #wrap /*to make a frame for the content of the article so the article won't go anywhere */
+{
+    margin-left: 5px;
+    margin-right: 50px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    width: 800px;
+    background: #fff;
+    padding: 10px;
+}
+#contentheader /*for the frame of the title, recommended to use div*/
+{
+    background-color: gainsboro;
+    color: black;
+    height: 70px;
+    width: 41%;
+    }
+.content1{
+    height: 120px;
+    width: 190px;
+}
+#contentheader h1 /*for the font of the title, inside the content header*/
+{ 
+    font-size: 20px;
+    letter-spacing: -1px;
+    padding: 10px 0 0 10px;
+    color: indianred;
+}
+#content /*where the article is written*/
+{
+    padding: 0 20px 20px 0;
+    font-size: 10px;
+}
+.rightlayout a /*for the recomendation to read next, recomended for image, use it before using wrap*/
+{
+    float: right;
+    width: 140px;
+    height: 90px;
+    text-align: justify;
+    padding-top: 100px;
+    margin-top: -2px;
+    margin-right: 7px;
+    clear: both;
+    padding-bottom: 0px;
+  
+}
+.rightlayout a: hover/*the image can change color when the cursor pointed at the image*/
+{
+    float: right;
+    width: 100px;
+    height: 80px;
+    text-align: justify;
+    padding-top: 1px;
+    margin-top: 1px;
+    margin-right: 100px;
+    clear: both;
+    opacity: 30%;
+  
+}
+.righttitle h2 a /*for hyperlink of .rightlayout a, use it after using .rightlayout a*/
+{
+    text-decoration: none;
+    text-align: center;
+    padding-top: 1px;
+    float: right;
+    width: 140px;
+    height: 20px;
+    background-color: gainsboro;
+    clear: both;
+    margin-right: 7px;
+ 
+}
+}
