--- a/css/login.css
+++ b/css/login.css
@@ -317,3 +317,115 @@ font-weight: 600;
 	font-size: 11px;
 }
 }
+
+
+
+
+
+
+
+@media (max-width :376px) {
+
+    
+body /*changes the body, from font, bg color,     
+    positioning*/
+{
+margin: 0;
+padding: 0;
+height: 100vh;
+background: grey;
+font-family: Poopins, sans-serif;
+}
+.login /*makes the login box in the middle*/
+{
+text-align: center;
+width: 250px;
+box-sizing: border-box;
+padding: 10px;
+background: #fff;
+margin-left:20%;
+margin-bottom:10%;
+margin-top: 7%;
+border: solid grey;
+}
+.login h2 /*changes the font inside the login frame*/
+{
+margin: 0 0 20px;
+padding: 1px;
+font-size: 10px;
+text-transform: inherit;
+text-align: center;
+}
+.login .input-group /*changes the login frame positioning*/
+{
+position: relative;
+width: 100%;
+margin-bottom: 20px;
+}
+.login .input-group input /*changes the styling of the input box inside the login frame*/
+{
+height: 20px;
+width: 100%;
+padding: 0 10px;
+box-sizing: border-box;
+font-size: 15px;
+outline: none;
+background-color: #00FFFF;
+border-radius: 25%;
+border: 1px solid #000;
+}
+.login .input-group span /*changes the styling of the font inside the input box*/
+{
+position: absolute;
+top: 4px;
+left: 3px;
+padding: 1px;
+transition: 0.5s;
+pointer-events: none;
+background: #00FFFF;
+text-transform: uppercase;
+}
+.login .input-group input:focus ~ span /*changes the login box color/style*/
+.login .input-group input:valid ~ span
+{
+top: 10px;
+left: 12px;
+font-size: 15px;
+padding: 2px 4px;
+border: 1px solid #000;
+background: #ff0;
+}
+.login .input-group input[type="submit"] /*changes the login box color and style*/
+{
+background: indianred;
+border: none;
+box-shadow: none;
+text-transform: uppercase;
+cursor: pointer;
+font-weight: 300px;
+background-color: blue;
+}
+.login .input-group input[type="submit"]:hover /*makes the color of the login box different when a mouse hover above it*/
+{
+background-color: 
+}
+.login a /*changes the style and position of the hyperlink*/
+{
+color: #262626;
+text-decoration: none;
+display: block;
+text-align: left;
+color: #666;
+}
+.login a span /*changes the style of the hyperlink font*/
+{
+color: #262626;
+font-weight: 600;
+}
+.login p{
+	text-align: left;
+    padding: 1px;
+	font-size: 14px;
+}
+}
+
