--- a/css/basic.css
+++ b/css/basic.css
@@ -119,7 +119,7 @@ body { /*make default font sans-serif on the body, and changes the bg color whit
     float: right;
     padding-top: 10px;
     padding-left: 20px;
-    padding-right: 20px;
+    padding-right: 30px;
     font-size: 11px;
     background-color: white;
     height:20px;
@@ -145,18 +145,9 @@ body { /*make default font sans-serif on the body, and changes the bg color whit
 
 }
 
+@media (max-width: 360px) { 
 
-
-
-
-
-
-
-
-
-
-@media (max-width: 376px){
- * {
+    {
     padding: 0;
     margin: 0
   }
@@ -170,7 +161,7 @@ body { /*make default font sans-serif on the body, and changes the bg color whit
 #header { /*make grey bar/menu section styling, can be modified into your liking, but reccomended width is 100%*/
     color: black;
     background-color: purple;
-    height: 30px;
+    height: 35px;
     width: 100%;
     }
 
@@ -182,29 +173,28 @@ body { /*make default font sans-serif on the body, and changes the bg color whit
     float:left;
     padding-top: 10px;
     padding-left: 20px;
-    }
+}
 #header h3 a:hover { /*turns the menu in header red when you hover it, can be modified to your liking*/
-    font-size: 30px;
+    font-size: 20px;
     text-decoration: none;
     font-family:sans-serif;
     color:black;
     float:left;
-    padding-top: 5px;
-    padding-left: 30px;
+    padding-top: 10px;
+    padding-left: 20px;
 }
 #header h1 a { /*makes login button in the right corner, reccomended putting this login div inside the header div*/
     text-align: center;
-    width: 6%;
+    width: 4%;
     color: black;
     float: right;
     padding-top: 10px;
-    padding-left: 10px;
-    padding-right: 20px;
-    border-radius: 50%;
+    padding-left: 20px;
+    padding-right: 35px;
+    font-size: 11px;
     background-color: white;
-    height: 20px;
+    height:20px;
 }
-
 #logoheader { /*logo in header, fixed size is 50px and 150px, can be modified with 1:2 ratio*/
     height: 50px;
     width: 150px;
@@ -215,13 +205,13 @@ body { /*make default font sans-serif on the body, and changes the bg color whit
     width: 200px;
 }
 #footer { /*makes a footer section*/
-    height: 100px;
+    height: 70px;
     width: 100%;
     text-align: center;
     position: relative;
-    width: 100%;
     color: white;
-    line-height: 100px;
+    font-size: 10px;
     background-color: purple;
-}   
+}
+
 }
